--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "fmt": "prettier --write \"**/*.{js,ts,tsx}\""
   },
   "dependencies": {
     "next": "12.1.4",
@@ -19,6 +20,7 @@
     "@types/react-dom": "17.0.14",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
+    "prettier": "^2.6.1",
     "typescript": "4.6.3"
   }
 }
