--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "^2.6.1",
     "typescript": "4.6.3"
+  },
+  "volta": {
+    "node": "16.13.1",
+    "yarn": "1.22.17"
   }
 }
