--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint --fix",
-    "fmt": "prettier --write \"**/*.{js,ts,tsx}\""
+    "fmt": "prettier --write \"**/*.{js,ts,tsx}\"",
+    "test": "jest --watch"
   },
   "dependencies": {
     "next": "12.1.4",
@@ -15,6 +16,7 @@
     "react-dom": "18.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.3",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
@@ -25,7 +27,9 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "jest": "^27.5.1",
     "prettier": "^2.6.1",
+    "ts-jest": "^27.1.4",
     "typescript": "4.6.3"
   },
   "volta": {
