--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint --fix",
+    "fix": "yarn lint",
     "fmt": "prettier --write \"**/*.{js,ts,tsx}\"",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "12.1.4",
@@ -27,8 +29,10 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "husky": "^7.0.4",
     "jest": "^27.5.1",
     "prettier": "^2.6.1",
+    "react-test-renderer": "^18.0.0",
     "ts-jest": "^27.1.4",
     "typescript": "4.6.3"
   },
