--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "fix": "yarn lint",
     "fmt": "prettier --write \"**/*.{js,ts,tsx}\"",
     "test": "jest --watch",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint-staged": "lint-staged"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.8.7",
@@ -39,6 +40,12 @@
     "react-test-renderer": "^18.0.0",
     "ts-jest": "^27.1.4",
     "typescript": "4.6.3"
+  },
+  "lint-staged": {
+    "*.{js,ts,jsx,tsx}": [
+      "yarn lint",
+      "yarn fmt"
+    ]
   },
   "volta": {
     "node": "16.13.1",
