--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
+    "lint-staged": "^12.3.7",
     "prettier": "^2.6.1",
     "react-test-renderer": "^18.0.0",
     "ts-jest": "^27.1.4",
