--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
   },
   "lint-staged": {
     "*.{js,ts,jsx,tsx}": [
-      "yarn lint",
-      "yarn fmt"
+      "yarn lint"
     ]
   },
   "volta": {
