--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "typescript": "4.6.3"
   },
   "lint-staged": {
-    "*.{js,ts,jsx,tsx}": [
+    "*.{ts,tsx}": [
       "yarn lint"
     ]
   },
