--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
   },
   "lint-staged": {
     "*.{ts,tsx}": [
-      "yarn lint"
+      "eslint --fix",
+      "git add"
     ]
   },
   "volta": {
