--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
   },
   "lint-staged": {
     "*.{ts,tsx}": [
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ]
   },
   "volta": {
