--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "framer-motion": "^6",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.3",
