--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "typecheck": "tsc --project tsconfig.json --noEmit",
     "lint": "next lint --fix",
     "fix": "yarn lint",
     "fmt": "prettier --write \"**/*.{js,ts,tsx}\"",
