--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,10 @@
 {
+  "arrowParens": "avoid",
+  "bracketSpacing": true,
+  "bracketSameLine": false,
+  "endOfLine": "auto",
+  "printWidth": 80,
   "semi": false,
   "singleQuote": true,
-  "printWidth": 80,
-  "tabWidth": 2,
-  "arrowParens": "always"
+  "trailingComma": "es5"
 }
